Some initial CSS work

--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,18 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+#PanelNotConnected {
+  background-color: #f02c34;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.App-header {
+#PanelConnected {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -19,15 +24,31 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#NewDevice {
+  background-color: #42cbf5;
+  min-width: 50vh;
+  border-radius: 10px;
+  min-height: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  font-weight: bold;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.DeviceName {
+  background-color: #fcfeff;
+  min-width: 50vh;
+  border-radius: 10px;
+  min-height: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  font-weight: bold;
 }
