--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,16 @@ body {
 #reconnect button:active {
   opacity: 0.1;
 }
+
+.DevicePanel {
+  background-color: #ffffff;
+  min-height: 80vh;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  border-radius: 10px;
+}
